5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1637_2443.log
== TEST (2019-04-11 10:26:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite o valor do raio: "))
x = float(input("digite o valor da altura: "))
ops = int(input"O numero da opcao desejada: ")
vol = (4 * pi * (raio) ** 3) / 3
calota = (pi * (x) ** 2 * ((3 * raio) - x)) / 3
if (ops == 1):
	print(round(calota,2))

-- ERROR:
File "XXXX", line 7
    ops = int(input"O numero da opcao desejada: ")
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:26:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite o valor do raio: "))
x = float(input("digite o valor da altura: "))
ops = int(input("O numero da opcao desejada: "))
vol = (4 * pi * (raio) ** 3) / 3
calota = (pi * (x) ** 2 * ((3 * raio) - x)) / 3
if (ops == 1):
	print(round(calota,2))

-- OUTPUT:
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite o valor do raio: "))
x = float(input("digite o valor da altura: "))
ops = int(input("O numero da opcao desejada: "))
vol = (4 * pi * (raio) ** 3) / 3
calota = (pi * (x) ** 2 * ((3 * raio) - x)) / 3
if (ops == 1):
	print(round(calota,4))
if (ops == 2):
	print(round(vol - calota),4)

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:29:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite o valor do raio: "))
x = float(input("digite o valor da altura: "))
ops = int(input("O numero da opcao desejada: "))
vol = (4 * pi * (raio) ** 3) / 3
calota = (pi * (x) ** 2 * ((3 * raio) - x)) / 3
if (ops == 1):
	print(round(calota,4))
if (ops == 2):
	print(round((vol - calota),4)

-- ERROR:
File "XXXX", line 14
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite o valor do raio: "))
x = float(input("digite o valor da altura: "))
ops = int(input("O numero da opcao desejada: "))
vol = (4 * pi * (raio) ** 3) / 3
calota = (pi * (x) ** 2 * ((3 * raio) - x)) / 3
combs = vol - calota
if (ops == 1):
	print(round(calota,4))
if (ops == 2):
	print(round(combs,4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:30:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("digite o valor do raio: "))
x = float(input("digite o valor da altura: "))
ops = int(input("O numero da opcao desejada: "))
vol = (4 * pi * (raio) ** 3) / 3
calota = (pi * (x) ** 2 * ((3 * raio) - x)) / 3
combs = vol - calota
if (ops == 1):
	print(round(calota,4))
if (ops == 2):
	print(round(combs,4))

-- EXECUTION TIME:
0.207134
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
